--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.9.0",
     "chart.js": "^4.4.9",
     "gsap": "^3.13.0",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.511.0",
     "otp-generator": "^4.0.1",
     "react": "^19.1.0",
@@ -20,7 +21,7 @@
     "react-error-boundary": "^6.0.0",
     "react-icons": "^5.5.0",
     "react-player": "^2.16.0",
-    "react-router-dom": "^7.6.0",
+    "react-router-dom": "^7.6.1",
     "react-scripts": "5.0.1",
     "react-toastify": "^11.0.5",
     "styled-components": "^6.1.18",
