--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,7 +33,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "serve": "serve -s build -l 2222"
+    "serve": "serve -s build -l $PORT"
   },
   "eslintConfig": {
     "extends": [
