--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.9.0",
     "chart.js": "^4.4.9",
     "gsap": "^3.13.0",
+    "http-server": "^14.1.1",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.511.0",
     "otp-generator": "^4.0.1",
@@ -24,7 +25,6 @@
     "react-router-dom": "^7.6.1",
     "react-scripts": "5.0.1",
     "react-toastify": "^11.0.5",
-    "serve": "^14.2.1",
     "styled-components": "^6.1.18",
     "web-vitals": "^2.1.4"
   },
@@ -33,7 +33,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "serve": "serve -s build -l $PORT"
+    "serve": "http-server build -p ${PORT:-3000} -a 0.0.0.0"
   },
   "eslintConfig": {
     "extends": [
