--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,8 +11,8 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.9.0",
     "chart.js": "^4.4.9",
+    "express": "^4.18.2",
     "gsap": "^3.13.0",
-    "http-server": "^14.1.1",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.511.0",
     "otp-generator": "^4.0.1",
@@ -33,7 +33,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "serve": "http-server build -p ${PORT:-3000} -a 0.0.0.0"
+    "serve": "node server.js"
   },
   "eslintConfig": {
     "extends": [
